// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <Img> with isLoaded prop 1`] = `
<Img
  blur={2}
  component="div"
  image="image.jpg"
  isCached={true}
  isLoaded={true}
  opacity={0.9}
  scale={1}
>
  <Styled(BaseComponent)
    blur={2}
    component="div"
    isCached={true}
    isLoaded={true}
    opacity={0.9}
    scale={1}
    style={
      Object {
        "backgroundImage": "url(\\"image.jpg\\")",
      }
    }
  >
    <BaseComponent
      blur={2}
      className="sc-bdVaJa dvevVe"
      component="div"
      isCached={true}
      isLoaded={true}
      opacity={0.9}
      scale={1}
      style={
        Object {
          "backgroundImage": "url(\\"image.jpg\\")",
        }
      }
    >
      <div
        className="sc-bdVaJa dvevVe"
        opacity={0.9}
        scale={1}
        style={
          Object {
            "backgroundImage": "url(\\"image.jpg\\")",
          }
        }
      />
    </BaseComponent>
  </Styled(BaseComponent)>
</Img>
`;

exports[`should render <Img> without isLoaded prop 1`] = `
<Img
  blur={2}
  component="img"
  image="image.jpg"
  isCached={false}
  isLoaded={false}
  opacity={0.9}
  scale={1}
>
  <Styled(BaseComponent)
    blur={2}
    component="img"
    isCached={false}
    isLoaded={false}
    opacity={0.9}
    scale={1}
    src="image.jpg"
    style={Object {}}
  >
    <BaseComponent
      blur={2}
      className="sc-bdVaJa klmwLC"
      component="img"
      isCached={false}
      isLoaded={false}
      opacity={0.9}
      scale={1}
      src="image.jpg"
      style={Object {}}
    >
      <img
        className="sc-bdVaJa klmwLC"
        opacity={0.9}
        scale={1}
        src="image.jpg"
        style={Object {}}
      />
    </BaseComponent>
  </Styled(BaseComponent)>
</Img>
`;
